--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -11,6 +11,7 @@ option(METABENCH_MPL        "Benchmark MPL"     ON)
 
 include(ExternalProject)
 include(CheckCXXCompilerFlag)
+include(benchmark/FindCXXStandard)
 
 if (METABENCH_FUSION OR METABENCH_MPL)
     find_package(Boost QUIET)
@@ -120,23 +121,33 @@ macro(add_dataset datasets dataset path_to_template range)
     set(_enabled OFF)
     unset(_dependency)
     if(${dataset} MATCHES "brigand\\.")
-        set(_enabled ${METABENCH_BRIGAND})
-        set(_dependency Brigand)
+        if (NOT (${CXX_STANDARD} LESS 2011))
+            set(_enabled ${METABENCH_BRIGAND})
+            set(_dependency Brigand)
+        endif()
     elseif(${dataset} MATCHES "fusion\\.")
         set(_enabled ${METABENCH_FUSION})
     elseif(${dataset} MATCHES "hana\\.")
-        set(_enabled ${METABENCH_HANA})
-        set(_dependency Hana)
+        if (NOT (${CXX_STANDARD} LESS 2014))
+            set(_enabled "${METABENCH_HANA}")
+            set(_dependency Hana)
+        endif()
     elseif(${dataset} MATCHES "meta\\.")
-        set(_enabled ${METABENCH_META})
-        set(_dependency Meta)
+        if (NOT (${CXX_STANDARD} LESS 2011))
+            set(_enabled ${METABENCH_META})
+            set(_dependency Meta)
+        endif()
     elseif(${dataset} MATCHES "metal\\.")
-        set(_enabled ${METABENCH_METAL})
-        set(_dependency Metal)
+        if (NOT (${CXX_STANDARD} LESS 2011))
+            set(_enabled ${METABENCH_METAL})
+            set(_dependency Metal)
+        endif()
     elseif (${dataset} MATCHES "mpl\\.")
         set(_enabled ${METABENCH_MPL})
     elseif (${dataset} MATCHES "std\\.")
-        set(_enabled ON) # std:: is always available
+        if (NOT (${CXX_STANDARD} LESS 2011))
+            set(_enabled ON)
+        endif()
     else()
         message(FATAL_ERROR
             "The dataset named '${dataset}' does not appear to benchmark any "
